--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
 												<p>To view the full MVVG Paper please click the button below</p>
 											</header>
 											<ul class="style2">
-												<a href="/Users/kyleriingen/Downloads/html5up-escape-velocity/downloads/Kyle Riingen Mission Vission, Values and Goals 2023.pdf" target="_blank"class="button style1">MVVG Download</a>
+												<a href="downloads/Kyle Riingen Mission Vission, Values and Goals 2023.pdf" target="_blank"class="button style1">MVVG Download</a>
 												<li>
 													<article class="box post-excerpt">
 														<a href="#" class="image left"><img src="images/MLetter.jpg" alt="" /></a>
