--- a/no-sidebar.html
+++ b/no-sidebar.html
@@ -45,7 +45,7 @@
 										<h2>Below you can view my Resume<br class="mobile-hide"/></h2>
 										<p>Click the button below to download a pdf version</p>
 										<p>. . .</p>
-										<li><a href="#" class="button style1">Resume PDF</a></li>
+										<li><a href="downloads/KyleRiingenResume(Dec2023).pdf" class="button style1">Resume PDF</a></li>
 										<img src="images/2023_Resume.jpg" alt="Description of the image">
 								</article>
 							</div>
