--- a/left-sidebar.html
+++ b/left-sidebar.html
@@ -61,7 +61,7 @@
 												</li>
 												<li>
 													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/Java.jpg" alt="" /></a>
+														<a href="#" class="image left"><img src="images/Java3.jpg" alt="" /></a>
 														<h3><a href="#">Socket Program</a></h3>
 														<p>Language: Java</p>
 														<p>Implementations: Sockets, While Loops, Nested For Loops, If/Else Statements, Custom Functions </p>
@@ -89,7 +89,7 @@
 												</li>
 												<li>
 													<article class="box post-excerpt">
-														<a href="#" class="image left"><img src="images/Java.jpg" alt="" /></a>
+														<a href="#" class="image left"><img src="images/Java3.jpg" alt="" /></a>
 														<h3><a href="#">Maze Game</a></h3>
 														<p>Language: Java</p>
 														<p>Implementations: JavaFX, File I/O, Custom Classes, Custom Functions, If/Else Statements</p>
